<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/space_16"
    android:orientation="vertical"
    tools:context=".StudentProfileActivity">

    <Switch
        android:id="@+id/switch_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_switchmode" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16">

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview_name" />


        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/edittext_name"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16">

        <TextView
            android:id="@+id/textview_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview_surname" />

        <EditText
            android:id="@id/edittext_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/edittext_surname"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16">

        <TextView
            android:id="@+id/textview_university"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview_university" />

        <EditText
            android:id="@+id/edittext_university"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/edittext_university"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16">

        <TextView
            android:id="@+id/textview_faculty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview_faculty" />


        <EditText
            android:id="@+id/edittext_faculty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/edittext_faculty"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/saveStudDetailsBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:text="@string/btn_savestuddetails"
        android:background="@drawable/btn_rounded"
        android:paddingLeft="@dimen/space_16"
        android:paddingRight="@dimen/space_16"
        android:paddingBottom="@dimen/space_24"
        android:paddingTop="@dimen/space_24"
        android:textColor="@android:color/white"
        android:onClick="btnSaveOnClick"/>

</LinearLayout>